css/style.css
/* Shared */
body {
  font-family: 'Poppins', sans-serif;
  background-color: #ffffff;
background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23f1f2f6' fill-opacity='0.63'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.navbar {
  height: 10vh;
}

.navbar a {
  margin-right: 20px;
  font-size: 14px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: .2em;
}

/* Hamburger */

.hamburger {
  width: 35px;
  position: absolute;
  right: 40px;
  top: 10px;
  cursor: pointer;
}

.bar1, .bar2, .bar3 {
  background-color: #000;
}

.bar1 {
  width: 35px;
  height: 3px;
  margin: 6px 0;
  transition: 0.4s;
  float: right;
}

.bar2 {
  width: 15px;
  height: 3px;
  
  transition: 0.4s;
  float: right;
}

.bar3 {
  width: 25px;
  height: 3px;
  margin: 6px 0;
  transition: 0.4s;
  float: right;
}

/* Buttons */

.todo a {
  text-decoration: none;
}

.todo a:hover 
{
   color:#ffffff; 
   text-decoration:none; 
   cursor:pointer;  
}

.btn-green {
  cursor:pointer;  
  background-color: #2ed573;
  border-radius: 100px!important;
  color: #ffffff;
  margin: 0;
}

.btn-red {
  cursor:pointer;  
  background-color: #ff4757;
  border-radius: 100px!important;
  color: #ffffff;
  margin: 0;
}

/* ToDo List */

.todo

.done-true {
  text-decoration: line-through;
  color: grey;
}

.unstyled {
  list-style: none;
  padding-left: 0;
}

@keyframes click-wave {
  0% {
    height: 40px;
    width: 40px;
    opacity: 0.35;
    position: relative;
    border-radius: 100px;
  }
  100% {
    height: 200px;
    width: 200px;
    margin-left: -80px;
    margin-top: -80px;
    opacity: 0;
    border-radius: 100px;
  }
}

.option-input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  appearance: none;
  position: relative;
  top: 13.33333px;
  right: 0;
  bottom: 0;
  left: 0;
  height: 40px;
  width: 40px;
  transition: all 0.15s ease-out 0s;
  background: #cbd1d8;
  border: none;
  border-radius: 100px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  margin-right: 0.5rem;
  outline: none;
  position: relative;
  z-index: 1000;
}
.option-input:hover {
  background: #9faab7;
}
.option-input:checked {
  background: #3742fa;
}
.option-input:checked::before {
  height: 40px;
  width: 40px;
  position: absolute;
  content: '✔';
  display: inline-block;
  font-size: 26.66667px;
  text-align: center;
  line-height: 40px;
}
.option-input:checked::after {
  -webkit-animation: click-wave 0.65s;
  -moz-animation: click-wave 0.65s;
  animation: click-wave 0.65s;
  background: #3742fa;
  content: '';
  display: block;
  position: relative;
  z-index: 100;
}

input {
  border-top: 0;
  border-left: 0;
  border-right: 0;
  background: transparent;
  outline: none;
}





/* Mobile first queries */

/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}

